# OmniTrust

./: README.md  hello.txt  note.txt
wallet/: Cargo.toml
wallet/src/: blockchain.rs  main.rs
