[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.7.3", default-features = false, features = ["std"] }
rand_core = { version = "0.5.1", features = ["std"] }
ed25519-dalek = { version = "1.0.1", features = ["std"] }
hex = "0.4.3"